modificacion, 2da entrega js

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRACTICA JS</title>
+    <title>Agencia de vehiculos</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <form action="" method="post">
+        <label for="name">Nombre de alumno</label>
+        <input type="text" name="" id="name">
+        <br>
+        <label for="cal">Calificacion</label>
+        <input type="number" name="" id="cal">
+        <button type="button" id="btn">Cargar</button>
+    </form>
     <script src="./js/main.js"></script>
 </body>
 </html>
